# stereo-cam

./: .gitignore  CMakeLists.txt  README.md  new_readme.md  package.xml
config/: GOOD_StereoCalibration.yaml  depth_params.yaml  disparity.yaml  disparity_params.yaml  ekf.yaml  laptop_camera_params.yaml  left_camera_info_good.yaml  raspi_camera_params.yaml  right_camera_info.yaml  right_camera_info_good.yaml
config/calibrations/: StereoCalibration_6_27.yaml  StereoCalibration_6_30.yaml  StereoCalibration_7_15_laser.yaml  StereoCalibration_7_17.yaml  StereoCalibration_7_2.yaml  StereoCalibration_7_2_flipped.yaml
config/cameras/: StereoCalibration_6_26.yaml  StereoCalibration_6_27_1280.yaml  StereoCalibration_7_1.yaml  laptop_camera_params.yaml  left_camera_info.yaml  raspi_camera_params.yaml  right_camera_info.yaml
config/odom/: ekf.yaml  ekf_bno.yaml  ekf_imu_only.yaml  ekf_mpu.yaml  ekf_test.yaml  mpu_imu.yaml  rtab_odom.yaml  rtab_odom_rgbd.yaml  rtab_odom_stereo.yaml  rtab_odom_w_imu.yaml
include/cv_cam/: cv_cam.hpp
include/lccv/: libcamera_app_options.hpp
include/stereo_cam/: depth_node.hpp  stereo_node.hpp
launch/: custom_stereo_calib.launch.py  image_proc_pipeline.launch.py  image_proc_pipeline.py  odom_test.launch.py  point_cloud_gen.launch.py  stereo_calib.launch.py  stereo_cam.launch.py  stereo_image_proc.launch.py  stereo_image_rect.launch.py  test_obstacle_detection.launch.py  test_odometry_depth.launch.py  test_odometry_ekf.launch.py  test_odometry_imu_only.launch.py  test_odometry_madgwick.launch.py  test_odometry_stereo.launch.py  test_odometry_tracking.launch.py
scripts/: cap.py  set_cam.bash  set_cam_laptop.bash  set_cam_laptop_default.bash  set_cam_laser.bash  set_cam_raspi_defaults.bash  set_cam_rgb.bash
src/: calib_utils.cpp  depth_node.cpp  main.cpp  obstacle_detection_node.cpp  stereo_calib.cpp  stereo_node.cpp
src/cv_cam/: cv_cam.cpp
src/lccv/: lccv.cpp  libcamera_app.cpp  libcamera_app_options.cpp
urdf/: stereo_camera.urdf.xacro
